Following changes were made 1. Removed all default view pages 2. Added TodoComponent 3. Added Todo action method to return static todo items 4. Rendering angular app on base url

--- a/VZDemoMvcApp/VZDemoMvcApp/Angular/src/app/app.component.html
+++ b/VZDemoMvcApp/VZDemoMvcApp/Angular/src/app/app.component.html
@@ -1,10 +1,6 @@
 <div style="text-align:center">
-  <h1>
-    Jogging Records
-  </h1>
-
-  <span *ngFor="let record of joggingRecords">
-    {{record.Description}} - {{record.Distance}}
-    <br />
-  </span>
+  <p>Hello World..</p>
+  <p>This is VZ Demo Web App</p>
+  <todo></todo>
+  <todo></todo>
 </div>
